# scrapper

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml
api_generator/: __init__.py  json_builder.py  pope_feeds_generator.py  posts_generator.py
cli/: args.py  main.py
models/: __init__.py  document.py  document_summary.py  pope.py  vatican_metadata.py
scrapper/: __init__.py  image_downloader.py  vatican_documents_index.py  vatican_pope.py  vatican_scraper.py
