[project]
name = "scrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.13",
    "beautifulsoup4>=4.13.4",
    "lxml>=6.0.0",
    "pypdf2>=3.0.1",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]
